<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_snippet_list"
			android:icon="@drawable/ic_list_white"
			android:title="@string/menu_snippet_list"/>
		<item
			android:id="@+id/nav_compile_and_run"
			android:icon="@drawable/ic_compile_white"
			android:title="@string/menu_compile_and_run"/>
		<item
			android:id="@+id/nav_logout"
			android:icon="@drawable/ic_person_white"
			android:title="@string/menu_logout"/>
	</group>

	<item android:title="@string/menu_developer">
		<menu>
			<group android:checkableBehavior="single">
				<item
					android:id="@+id/nav_feedback"
					android:icon="@drawable/ic_feedback_white"
					android:title="@string/menu_feedback"/>
				<item
					android:id="@+id/nav_exit"
					android:icon="@drawable/ic_exit_white"
					android:title="@string/menu_exit"/>
			</group>
		</menu>
	</item>

</menu>
