<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.manthansharma.snippet.LoginActivity">

	<ImageView android:layout_width="wrap_content"
	           android:layout_height="72dp"
	           android:layout_gravity="center_horizontal"
	           android:layout_marginBottom="24dp"
	           android:layout_marginTop="48dp"
	           android:contentDescription="@string/logo_contentDes"
	           android:src="@drawable/logo"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:overScrollMode="never">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingLeft="24dp"
			android:paddingRight="24dp">

			<android.support.design.widget.TextInputLayout
				android:id="@+id/wrapper_signup_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginTop="8dp">


				<EditText
					android:id="@+id/input_signup_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_name"
					android:inputType="textCapWords"
					android:maxLines="1"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/wrapper_signup_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginTop="8dp">


				<EditText
					android:id="@+id/input_signup_email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_email"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/wrapper_signup_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginTop="8dp">

				<EditText
					android:id="@+id/input_signup_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_password"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/signup_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="24dp"
				android:layout_marginTop="24dp"
				android:padding="12dp"
				android:text="@string/action_signup_short"
			/>

			<TextView android:id="@+id/link_login"
			          android:layout_width="fill_parent"
			          android:layout_height="wrap_content"
			          android:layout_marginBottom="24dp"
			          android:gravity="center"
			          android:text="@string/action_login_link"
			          android:textSize="16sp"/>

		</LinearLayout>
	</ScrollView>
</LinearLayout>