<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

	<ImageView android:layout_width="wrap_content"
	           android:layout_height="72dp"
	           android:layout_gravity="center_horizontal"
	           android:layout_marginBottom="24dp"
	           android:layout_marginTop="48dp"
	           android:contentDescription="@string/logo_contentDes"
	           android:src="@drawable/logo"/>
	<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:fitsSystemWindows="true"
		android:overScrollMode="never">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingLeft="24dp"
			android:paddingRight="24dp"
			android:paddingTop="24dp">

			<!-- Email Label -->
			<android.support.design.widget.TextInputLayout
				android:id="@+id/wrapper_login_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginTop="8dp">

				<EditText
					android:id="@+id/input_login_email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_email"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<!-- Password Label -->
			<android.support.design.widget.TextInputLayout
				android:id="@+id/wrapper_login_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginTop="8dp">

				<EditText
					android:id="@+id/input_login_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_password"
					android:inputType="textPassword"
					android:maxLines="1"
					android:singleLine="true"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.v7.widget.AppCompatButton
				android:id="@+id/login_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="24dp"
				android:layout_marginTop="24dp"
				android:padding="12dp"
				android:text="@string/action_login"/>

			<TextView android:id="@+id/link_signup"
			          android:layout_width="fill_parent"
			          android:layout_height="wrap_content"
			          android:layout_marginBottom="24dp"
			          android:gravity="center"
			          android:text="@string/action_signup_link"
			          android:textSize="16sp"/>

		</LinearLayout>
	</ScrollView>
</LinearLayout>