<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:overScrollMode="never">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:focusableInTouchMode="true"
		android:orientation="vertical"
		android:overScrollMode="never"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:weightSum="1"
		tools:context="com.manthansharma.snippet.CreateSnippet">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/wrapper_create_snippet_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/input_create_snippet_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/create_snippet_name"
				android:inputType="textEmailAddress"
				android:maxLines="1"
				android:singleLine="true" android:text="Factorial Code"/>
		</android.support.design.widget.TextInputLayout>

		<TextView
			android:id="@+id/textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp"
			android:padding="2dp"
			android:text="@string/create_snippet_language"/>
		<Spinner
			android:id="@+id/input_create_snippet_language"
			style="@style/Widget.AppCompat.Spinner.Underlined"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:drawSelectorOnTop="true"
			android:padding="2dp"
			android:paddingBottom="8dp"
			android:spinnerMode="dialog"
		/>
		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp"
			android:padding="2dp"
			android:text="@string/create_snippet_style"/>
		<Spinner
			android:id="@+id/input_create_snippet_style"
			style="@style/Widget.AppCompat.Spinner.Underlined"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:padding="2dp"
			android:paddingBottom="8dp"
			android:spinnerMode="dialog"
		/>
		<android.support.design.widget.TextInputLayout
			android:id="@+id/wrapper_create_snippet_code"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp">
			<EditText
				android:id="@+id/input_create_snippet_code"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.47"
				android:ems="10"
				android:hint="@string/create_snippet_code"
				android:inputType="textMultiLine"
				android:isScrollContainer="true"
				android:lines="7"
				android:overScrollMode="always"
				android:scrollbarStyle="insideInset"
				android:scrollbars="vertical"
				android:text="def factorial(n):\n\tif n == 1:\n\t\treturn 1\n\telse:\n\t\treturn n * factorial(n-1)   \nprint factorial(10)\n"
				tools:ignore="HardcodedText"/>
		</android.support.design.widget.TextInputLayout>

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/create_snippet_btn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="24dp"
			android:layout_marginTop="24dp"
			android:padding="12dp"
			android:text="@string/create_snippet_btn"/>
	</LinearLayout>
</ScrollView>
